--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import 'icon';
 @import 'pagehero';
 @import 'modal';
+@import 'breadcrumb';
 @import 'mission-selector';
 @import 'mission-modal';
 @import 'section';
