create page nav

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @import 'pagehero';
 @import 'modal';
 @import 'breadcrumb';
+@import 'page-nav';
 @import 'mission-selector';
 @import 'mission-modal';
 @import 'section';
