change pagehero to homepage-hero

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,7 +12,7 @@
 // components
 @import 'button';
 @import 'icon';
-@import 'pagehero';
+@import 'homepage-hero';
 @import 'modal';
 @import 'breadcrumb';
 @import 'page-nav';
