--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,7 @@
 @import 'modal';
 @import 'breadcrumb';
 @import 'page-nav';
+@import 'page-callout';
 @import 'mission-selector';
 @import 'mission-modal';
 @import 'section';
