--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -1,8 +1,10 @@
 {% extends "layout.twig" %}
 
+{% set bodyClass = 'home' %}
+
 {% block page %}
 
-  {% include 'partials/pagehero.twig' %}
+  {% include 'partials/homepage-hero.twig' %}
 
   <div class="container">
 
