create program panel

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,7 @@
 @import 'carousel';
 @import 'footer-menu';
 @import 'program-spotlight';
+@import 'program-panel';
 @import 'spotlight-item';
 @import 'site-search';
 @import 'site-menu-button';
