--- a/src/templates/partials/footer.twig
+++ b/src/templates/partials/footer.twig
@@ -66,7 +66,7 @@
     </div>
 
     <div class="secondary-footer__button">
-      <a href="#top" class="button button--primary" aria-label="Back to top">
+      <a href="#pagetop" class="button button--primary" aria-label="Back to top">
         <i class="icon icon--chevron-up"></i>
       </a>
     </div>
