--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -26,3 +26,11 @@
         + "Please make sure it is defined in `$breakpoints` map.";
   }
 }
+
+@mixin absolute($top: 0, $right: 0, $bottom: 0, $left: 0) {
+  position: absolute;
+  top: $top;
+  right: $right;
+  bottom: $bottom;
+  left: $left;
+}
