relabel import section to better reflect the imports

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,7 @@
 @import 'variables';
 @import 'mixins';
 
-// resets
+// vendor
 @import '../../node_modules/normalize.css/normalize';
 @import '../../node_modules/bootstrap/scss/mixins/breakpoints';
 @import '../../node_modules/bootstrap/scss/mixins/grid';
