--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,7 +20,6 @@
 @import 'modal';
 @import 'breadcrumb';
 @import 'page-nav';
-@import 'page-callout';
 @import 'mission-selector';
 @import 'mission-modal';
 @import 'section';
@@ -30,6 +29,8 @@
 @import 'carousel';
 @import 'footer-menu';
 @import 'program-spotlight';
+@import 'page-callout';
+@import 'page-header';
 @import 'program-panel';
 @import 'spotlight-item';
 @import 'site-search';
