create panel component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,7 @@
 @import 'program-spotlight';
 @import 'page-callout';
 @import 'page-header';
+@import 'panel';
 @import 'program-panel';
 @import 'spotlight-item';
 @import 'site-search';
