--- a/src/templates/partials/panel.twig
+++ b/src/templates/partials/panel.twig
@@ -1,11 +1,18 @@
 {#TODO: change panel to use grid for panel__body and panel__footer#}
 <section class="panel{% if modifier %} panel--{{modifier}}{% endif %}">
   <div class="panel__media">
+    <picture>
+      <source srcset="http://unsplash.it/1440/600?random 1x, http://unsplash.it/2880/1200 2x" media="(min-width: 960px)">
+      {#TODO: need to load this on IE somehow without forcing an image on mobile#}
+      <img src="" alt="">
+    </picture>
   </div>
   <div class="panel__content">
     <div class="panel__body">
       <h1 class="panel__label">{{label}}</h1>
-      <h2 class="panel__title"><a href="{{link_url}}" class="panel__link">{{title}} <span aria-hidden="true">&rsaquo;</span></a></h2>
+      <h2 class="panel__title">
+        <a href="{{link_url}}" class="panel__link">{{title}} &rsaquo;</a>
+      </h2>
       <div class="panel__blurb">
         {{blurb}}
       </div>
