--- a/src/templates/partials/pageheader.twig
+++ b/src/templates/partials/pageheader.twig
@@ -1,27 +1,30 @@
 <header class="page-header">
+  <div class="page-header__row">
 
-  <div class="row">
-    <div class="col-md-7 col-lg-8 flex-last flex-md-first">
-
-      {% include 'partials/breadcrumb.twig' with { items: breadcrumb } %}
-
-      <div class="row">
-        <div class="col-8 col-md-12">
-          <h1>{{title}}</h1>
-        </div>
-        <div class="col-auto u-hide-md">
-          <a href="#page-nav" role="button" aria-label="Toggle page navigation" aria-controls="page-nav" data-toggle-target="#page-nav">
-            <span aria-hidden="true">&darr;</span>
-          </a>
-        </div>
+    <div class="page-header__primary">
+      <div class="page-header__breadcrumb">
+        {% include 'partials/breadcrumb.twig' with { items: breadcrumb } %}
       </div>
-
-    </div>
-    <div class="col-md-5 col-lg-4 flex-first flex-md-last">
-      <div class="page-callout">
-        <span class="page-callout__title">Application for Spring 2017 Now Open</span>
-        <a href="#" class="page-callout__button button button--primary">Apply Now</a>
+      <div class="page-header__content">
+        <h1 class="page-header__title">{{title}}</h1>
+      </div>
+      <div class="page-header__controls">
+        <a href="#page-nav" role="button" aria-label="Toggle page navigation" aria-controls="page-nav" data-toggle-target="#page-nav">
+          <span aria-hidden="true" class="u-is-toggled-show">&uarr;</span>
+          <span aria-hidden="true" class="u-is-toggled-hide">&darr;</span>
+        </a>
       </div>
     </div>
+
+    {% if callout_title %}
+      <div class="page-header__secondary">
+        {% include 'partials/page-callout.twig' with {
+          title: callout_title,
+          link_url: callout_link_url,
+          link_text: callout_link_text
+        } %}
+      </div>
+    {% endif %}
+
   </div>
 </header>
