--- a/src/scss/_mission-selector.scss
+++ b/src/scss/_mission-selector.scss
@@ -8,9 +8,13 @@
 }
 
 .mission-selector--overlap {
-  margin-top: -20px;
   z-index: 3;
   position: relative;
+  margin-top: -140px;
+
+  @include media(sm) {
+    margin-top: -20px;
+  }
 }
 
 .mission-selector__form {
