--- a/src/templates/partials/breadcrumb.twig
+++ b/src/templates/partials/breadcrumb.twig
@@ -1,6 +1,9 @@
 <nav class="breadcrumb">
   <ul class="breadcrumb__list">
-    {% for item in items %}
+    <li class="breadcrumb__item">
+      <a href="#" class="breadcrumb__link">Middlebury Institute of International Studies</a>
+    </li>
+  {% for item in crumbs %}
       <li class="breadcrumb__item">
         <a href="{{item.href}}" class="breadcrumb__link">{{item.text}}</a>
       </li>
