--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,31 +14,33 @@
 @import 'global';
 
 // components
-@import 'button';
-@import 'icon';
-@import 'homepage-hero';
-@import 'modal';
 @import 'breadcrumb';
-@import 'page-nav';
-@import 'mission-selector';
-@import 'mission-modal';
-@import 'section';
-@import 'input-group';
-@import 'callout';
+@import 'button';
 @import 'callout-group';
+@import 'callout';
+@import 'card';
 @import 'carousel';
 @import 'footer-menu';
-@import 'program-spotlight';
+@import 'homepage-hero';
+@import 'icon';
+@import 'input-group';
+@import 'mission-modal';
+@import 'mission-selector';
+@import 'modal';
 @import 'page-callout';
 @import 'page-header';
 @import 'page-hero';
+@import 'page-nav';
 @import 'panel';
 @import 'program-panel';
-@import 'spotlight-item';
-@import 'site-search';
-@import 'site-menu-button';
-@import 'social-links';
+@import 'program-spotlight';
 @import 'projects';
+@import 'section';
+@import 'site-menu-button';
+@import 'site-search';
+@import 'social-links';
+@import 'spotlight-item';
+@import 'video';
 
 // layout
 @import 'grid';
