--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -57,16 +57,11 @@
 }
 
 .element-invisible {
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px);
-  clip: rect(1px,1px,1px,1px);
-  overflow: hidden;
-  height: 1px;
+  @include sr-only();
+}
 
-  &.element-focusable:focus {
-    position: static !important;
-    clip: auto;
-    overflow: visible;
-    height: auto;
+.element-focusable {
+  @include sr-only-focusable();
+}
   }
 }
