--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,7 @@
 @import 'page-header';
 @import 'page-hero';
 @import 'page-nav';
+@import 'pagination';
 @import 'panel';
 @import 'program-panel';
 @import 'program-spotlight';
