create event teaser component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,7 @@
 @import 'callout';
 @import 'card';
 @import 'carousel';
+@import 'event-teaser';
 @import 'footer-menu';
 @import 'homepage-hero';
 @import 'icon';
