add imagemin task

--- a/src/templates/t02-area-of-focus.twig
+++ b/src/templates/t02-area-of-focus.twig
@@ -2,7 +2,7 @@
 
 {% block page %}
 
-  {% include 'partials/pageheader.twig' with {
+  {% include 'partials/page-header.twig' with {
     title: 'Sustainable Development',
     breadcrumb: [
       { text: 'Areas of Focus' },
