rename screen reader helpers to sr-only and sr-focusable

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -59,11 +59,11 @@
   position: relative;
 }
 
-.element-invisible {
+.sr-only {
   @include sr-only();
 }
 
-.element-focusable {
+.sr-focusable {
   @include sr-only-focusable();
 }
   }
