--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -9,7 +9,7 @@
 </head>
 <body id="pagetop">
   <div id="skip-link">
-    <a href="#main" class="element-invisible element-focusable">Skip to content</a>
+    <a href="#main" class="sr-only sr-focusable">Skip to content</a>
   </div>
   <div class="site-container">
     {% include 'partials/header.twig' %}
