swap quickimage url back to placehold

--- a/src/templates/partials/event-teaser.twig
+++ b/src/templates/partials/event-teaser.twig
@@ -2,9 +2,9 @@
   <figure class="event-teaser__media">
     <a href="{{url}}">
       <picture>
-        <source srcset="http:////quickimage.it/160x120" media="(min-width: 580px)">
-        <source srcset="http:////quickimage.it/100x75">
-        <img src="http:////quickimage.it/160x120" srcset="" alt="" class="event-teaser__img">
+        <source srcset="http://placehold.it/160x120" media="(min-width: 580px)">
+        <source srcset="http://placehold.it/100x75">
+        <img src="http://placehold.it/160x120" srcset="" alt="" class="event-teaser__img">
       </picture>
     </a>
   </figure>
