--- a/src/scss/_site-header.scss
+++ b/src/scss/_site-header.scss
@@ -2,10 +2,14 @@
   background-color: $brand-primary;
 
   @include media(md) {
-    width: $header-width;
     height: 675px;
     position: absolute;
     z-index: 3;
+
+    &.is-toggled,
+    .home & {
+      width: $header-width;
+    }
   }
 }
 
@@ -17,6 +21,7 @@
   height: 70px;
 
   @include media(md) {
+    display: block;
     height: auto;
     padding: 30px;
     padding-bottom: 70px;
@@ -26,10 +31,42 @@
 .site-header__brand {
   flex: 1;
   align-self: center;
+
+  @include media(md) {
+    margin-bottom: 20px;
+  }
+}
+
+.site-header__title {
+  text-indent: -9999px;
+  margin: 0;
 }
 
 .site-header__home-link {
 
+}
+
+// TODO: change to svg
+.site-header__logo {
+  display: block;
+  background-image: url('/img/miis-logo-left.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 213px;
+  height: 40px;
+
+  @include media(md) {
+    background-image: url('/img/miis-logo-shield.png');
+    width: 53px;
+    height: 59px;
+
+    .home &,
+    .site-header.is-toggled & {
+      background-image: url('/img/miis-logo.png');
+      width: 244px;
+      height: 107px;
+    }
+  }
 }
 
 .site-header__menu-button {
@@ -37,21 +74,31 @@
   align-self: center;
 
   @include media(md) {
-    display: none;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+
+    .home & {
+      display: none;
+    }
   }
 }
 
 .site-header__secondary {
-  &.has-toggler {
+  .site-header.has-toggler & {
     display: none;
+  }
 
+  .site-header.is-toggled & {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .home.home & {
     @include media(md) {
       display: flex;
       flex-direction: column;
-    }
-
-    &.is-toggled {
-      display: block;
     }
   }
 }
