--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/83898/7863772/css/fonts.css" />
 </head>
-<body id="pagetop">
+<body class="{% if bodyClass %}{{bodyClass}}{% endif %}" id="pagetop">
   <div id="skip-link">
     <a href="#main" class="sr-only sr-focusable">Skip to content</a>
   </div>
