--- a/src/scss/components/_event-teaser.scss
+++ b/src/scss/components/_event-teaser.scss
@@ -32,7 +32,9 @@
 }
 
 .event-teaser__title {
-
+  font-family: $font-family-serif;
+  font-weight: normal;
+  font-size: 22px;
 }
 
 .event-teaser__meta {
