--- a/src/scss/components/_callout.scss
+++ b/src/scss/components/_callout.scss
@@ -1,17 +1,17 @@
 .callout {
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+  margin-bottom: 20px;
 
   @include media(md) {
+    flex-direction: column;
+    display: flex;
+    height: 100%;
+    min-height: 270px;
     text-align: left;
   }
 }
 
-.callout--light {
-
-}
+.callout--light {}
 
 .callout__header {
   flex: 0 1 auto;
@@ -25,7 +25,6 @@
 .callout__footer {
   flex: 0 1 auto;
   padding-top: 20px;
-  padding-bottom: 40px;
 
   @include media(lg) {
     padding: 0;
@@ -46,6 +45,7 @@
 .callout__title {
   font-size: 40px;
   font-weight: $font-weight-book;
+  font-family: $font-family-serif;
   line-height: 1.3;
   margin-bottom: 0;
 
@@ -58,6 +58,4 @@
   margin-bottom: 0;
 }
 
-.callout__button {
-
-}
+.callout__button {}
