--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -11,12 +11,13 @@
     margin-right: 29px; // why 29?
   }
 
-  display: none;
+  // display: none;
 
   &:first-of-type,
   &:last-of-type,
-  &:nth-of-type(n+3) {
-    display: block;
+  // &:nth-of-type(n+3)
+  {
+    // display: block;
   }
 }
 
