--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -12,6 +12,16 @@
   }
 }
 
+@mixin link-border() {
+  border-bottom: 1px solid $middlebury-blue;
+  text-decoration: none;
+
+  &:hover {
+    border-bottom: 0;
+    text-decoration: none;
+  }
+}
+
 @mixin absolute($top: 0, $right: 0, $bottom: 0, $left: 0) {
   position: absolute;
   top: $top;
