--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,7 @@
 // core
-@import 'functions';
-@import 'variables';
-@import 'mixins';
+@import 'core/functions';
+@import 'core/variables';
+@import 'core/mixins';
 
 // vendor
 @import '../../node_modules/normalize.css/normalize';
@@ -9,62 +9,64 @@
 @import '../../node_modules/bootstrap/scss/mixins/grid';
 @import '../../node_modules/bootstrap/scss/mixins/screen-reader';
 @import '../../node_modules/bootstrap/scss/mixins/clearfix';
+@import '../../node_modules/bootstrap/scss/utilities/screenreaders';
 
 // base
-@import 'global';
+@import 'base/global';
+@import 'base/typography';
+@import 'base/table';
+@import 'base/grid';
 
 // components
-@import 'breadcrumb';
-@import 'button';
-@import 'callout-group';
-@import 'callout';
-@import 'card';
-@import 'carousel';
-@import 'event-teaser';
-@import 'footer-menu';
-@import 'homepage-hero';
-@import 'icon';
-@import 'input-group';
-@import 'mission-modal';
-@import 'mission-selector';
-@import 'modal';
-@import 'page-callout';
-@import 'page-header';
-@import 'page-hero';
-@import 'page-nav';
-@import 'pagination';
-@import 'panel';
-@import 'program-panel';
-@import 'program-spotlight';
-@import 'projects';
-@import 'section';
-@import 'site-menu-button';
-@import 'site-search';
-@import 'social-links';
-@import 'spotlight-item';
-@import 'video';
+@import 'components/breadcrumb';
+@import 'components/button';
+@import 'components/callout-group';
+@import 'components/callout-links';
+@import 'components/callout';
+@import 'components/card';
+@import 'components/carousel';
+@import 'components/drawer';
+@import 'components/event-teaser';
+@import 'components/filter';
+@import 'components/footer-menu';
+@import 'components/footer';
+@import 'components/form';
+@import 'components/hero-form';
+@import 'components/homepage-hero';
+@import 'components/icon';
+@import 'components/input-group';
+@import 'components/list';
+@import 'components/media-object';
+@import 'components/mission-modal';
+@import 'components/mission-selector';
+@import 'components/modal';
+@import 'components/page-callout';
+@import 'components/page-header';
+@import 'components/page-hero';
+@import 'components/page-nav';
+@import 'components/page';
+@import 'components/pagination';
+@import 'components/panel';
+@import 'components/program-panel';
+@import 'components/program-spotlight';
+@import 'components/projects';
+@import 'components/section';
+@import 'components/site-container';
+@import 'components/site-header';
+@import 'components/site-menu-button';
+@import 'components/site-nav';
+@import 'components/site-search';
+@import 'components/social-links';
+@import 'components/spotlight-item';
+@import 'components/video';
 
-// layout
-@import 'grid';
-@import 'site-header';
-@import 'footer';
-@import 'site-nav';
+// utils
+@import 'utils/clearfix';
+@import 'utils/float';
+@import 'utils/text';
+@import 'utils/spacing';
 
-.site-container {
-  background-color: $white;
-  width: 100%;
-  max-width: 1440px;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
+.u-link-border {
+  @include link-border();
 }
 
-.sr-only {
-  @include sr-only();
-}
-
-.sr-focusable {
-  @include sr-only-focusable();
-}
-  }
-}
