--- a/src/templates/t21-contact.twig
+++ b/src/templates/t21-contact.twig
@@ -70,15 +70,11 @@
 
                   <ul class="list">
                     <li class="list__item">
-                      <span class="list__icon">
-                        <svg width="17" height="20" viewBox="0 0 17 20" xmlns="http://www.w3.org/2000/svg"><title>icon-map</title><path d="M8.3 0C3.7 0 0 3.7 0 8.3c0 2.3 1 4.5 2.6 6L8.3 20l5.9-5.9c1.5-1.5 2.4-3.5 2.4-5.8 0-4.6-3.7-8.3-8.3-8.3zm0 11.9c-2 0-3.6-1.6-3.6-3.6s1.6-3.6 3.6-3.6 3.6 1.6 3.6 3.6-1.6 3.6-3.6 3.6z"/></svg>
-                      </span>
+                      <span class="list__icon">{{icons.map}}</span>
                       <a href="#" class="u-link-border">View in Google Maps</a>
                     </li>
                     <li class="list__item">
-                      <span class="list__icon">
-                        <svg width="18" height="22" viewBox="0 0 18 22" xmlns="http://www.w3.org/2000/svg"><title>icon-compass</title><path d="M9.4 3.3v-.4c.6-.2 1.1-.7 1.1-1.4C10.5.7 9.9.1 9.1.1c-.8 0-1.4.6-1.4 1.4 0 .7.5 1.2 1.1 1.4v.4c-5 .2-8.8 4.2-8.8 9 0 5 4 9 9 9s9-4 9-9c0-4.8-3.9-8.8-8.6-9zM8.3 1.5c0-.4.3-.7.7-.7.4 0 .7.3.7.7 0 .4-.3.7-.7.7-.4 0-.7-.3-.7-.7zM4.6 17.2h-.2c-.1 0-.2 0-.3-.1-.1-.1-.1-.2 0-.4L7 10.9l3.4 3.4-5.8 2.9zm9.3-9.3L11 13.8l-3.4-3.4 5.9-2.9c.1-.1.3 0 .4.1 0 0 .1.1 0 .3z"/></svg>
-                      </span>
+                      <span class="list__icon">{{icons.compass}}</span>
                       <a href="#" class="u-link-border">Get Directions</a>
                     </li>
                   </ul>
