create sidebar search component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -51,6 +51,7 @@
 @import 'components/program-spotlight';
 @import 'components/projects';
 @import 'components/section';
+@import 'components/sidebar-search';
 @import 'components/site-container';
 @import 'components/site-header';
 @import 'components/site-menu-button';
