use number for spacer sizes

--- a/src/scss/utils/_spacing.scss
+++ b/src/scss/utils/_spacing.scss
@@ -1,9 +1,12 @@
-// TODO: adhoc spacers like this aren't ideal, we should find an alternative
-.u-my-lg {
+.u-my-6 {
   margin-top: 60px;
   margin-bottom: 60px;
 }
 
-.u-mb-md {
-  margin-bottom: 50px;
+.u-mb-0 {
+  margin-bottom: 0;
+}
+
+.u-mb-6 {
+  margin-bottom: 60px;
 }
