use svg for footer back to top link icon

--- a/src/templates/partials/footer.twig
+++ b/src/templates/partials/footer.twig
@@ -68,7 +68,7 @@
 
     <div class="secondary-footer__button">
       <a href="#pagetop" class="button button--primary" aria-label="Back to top">
-        <i class="icon icon--chevron-up"></i>
+        {{icons.chevron_up}}
       </a>
     </div>
   </div>
