use button block for page callout

--- a/src/templates/partials/page-callout.twig
+++ b/src/templates/partials/page-callout.twig
@@ -3,6 +3,6 @@
     <span class="page-callout__title">{{title}}</span>
   </div>
   <div class="page-callout__action">
-    <a href="{{link_url}}" class="page-callout__button button button--primary">{{link_text}}</a>
+    <a href="{{link_url}}" class="page-callout__button button button--primary button--block">{{link_text}}</a>
   </div>
 </aside>
