--- a/src/templates/partials/page-callout.twig
+++ b/src/templates/partials/page-callout.twig
@@ -1,7 +1,9 @@
 <aside class="page-callout">
+  {% if title %}
   <div class="page-callout__content">
     <span class="page-callout__title">{{title}}</span>
   </div>
+  {% endif %}
   <div class="page-callout__action">
     <a href="{{link_url}}" class="page-callout__button button button--primary button--block">{{link_text}}</a>
   </div>
