--- a/src/templates/partials/section.twig
+++ b/src/templates/partials/section.twig
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section{% if class %} {{class}}{% endif %}">
   <header class="section__header">
     <h2 class="section__title">{{title}}</h2>
     <div class="section__nav">
