--- a/src/scss/components/_hero-form.scss
+++ b/src/scss/components/_hero-form.scss
@@ -4,20 +4,23 @@
 
 .hero-form__media {
 
-  @include media-breakpoint-down(md) {
+  @include media-breakpoint-down(sm) {
     margin-bottom: 30px;
   }
 }
 
 .hero-form__content {
-  @include media(md) {
+  @include media(sm) {
+    background-image: linear-gradient(to bottom, rgba(black, .5), transparent 50%);
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
     padding-top: 40px;
   }
 
-  @include media(lg) {
+  @include media(md) {
     padding-top: 115px;
   }
 }
@@ -26,8 +29,11 @@
   font-size: 20px;
   color: $gray;
 
-  @include media(md) {
+  @include media(sm) {
     color: $white;
+  }
+
+  @include media(md) {
     font-size: 22px;
   }
 }
@@ -40,12 +46,27 @@
   padding: 20px;
   font-size: 20px;
   font-family: $font-family-serif;
-  flex: 1;
   border: 0;
-  background-color: $warm-gray;
+
+  &:focus {
+    background-color: $warm-gray;
+  }
+
+  &::placeholder {
+    color: $black;
+  }
+
+  @include media(sm) {
+    background-color: $white;
+    font-size: 22px;
+
+    &:focus {
+      background-color: $white;
+    }
+  }
 
   @include media(md) {
-    background-color: $white;
+    font-size: 28px;
   }
 }
 
@@ -54,15 +75,16 @@
 }
 
 .hero-form__button {
-  flex: 0 0 auto;
-  background-color: transparent;
-  border: 0;
   padding: 20px;
-  line-height: inherit;
-  cursor: pointer;
+  font-size: 20px;
   background-color: $warm-gray;
 
-  @include media(md) {
+  @include media(sm) {
     background-color: $white;
+    font-size: 22px;
+  }
+
+  @include media(md) {
+    font-size: 28px;
   }
 }
