change crumbs to render items

--- a/src/templates/partials/breadcrumb.twig
+++ b/src/templates/partials/breadcrumb.twig
@@ -3,7 +3,7 @@
     <li class="breadcrumb__item">
       <a href="#" class="breadcrumb__link">Middlebury Institute of International Studies</a>
     </li>
-  {% for item in crumbs %}
+  {% for item in items %}
       <li class="breadcrumb__item">
         <a href="{{item.href}}" class="breadcrumb__link">{{item.text}}</a>
       </li>
