import event teaser lite

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,6 +27,7 @@
 @import 'components/carousel';
 @import 'components/drawer';
 @import 'components/event-teaser';
+@import 'components/event-teaser-lite';
 @import 'components/filter';
 @import 'components/footer-menu';
 @import 'components/footer';
