--- a/src/scss/base/_grid.scss
+++ b/src/scss/base/_grid.scss
@@ -2,13 +2,14 @@
   @include make-container();
 
   @include media(lg) {
-    padding-left: 60px;
-    padding-right: 60px;
+    // padding-left: 60px;
+    // padding-right: 60px;
   }
 }
 
 .row {
   @include make-row();
+  height: 100%;
 }
 
 .row--no-gutters {
@@ -22,36 +23,19 @@
 }
 
 .row--dividers {
-  // margin-bottom: 20px;
-  // margin-top: 20px;
 
   > [class^="col"]:not(:last-of-type) {
     border-bottom: 1px solid $line-gray;
+    padding-bottom: 50px;
+    margin-bottom: 50px;
   }
 
   @include media(md) {
     > [class^="col"]:not(:last-of-type) {
       border-bottom: 0;
       border-right: 1px solid $line-gray;
-    }
-  }
-}
-
-@mixin dividers($breakpoint) {
-  .row-#{$breakpoint}-dividers-y {
-    @include media-breakpoint-only($breakpoint) {
-      > [class^="col"]:not(:last-of-type) {
-        border-bottom: 1px solid $line-gray;
-        margin-bottom: 20px;
-      }
-    }
-  }
-
-  .row-#{$breakpoint}-dividers-x {
-    @include media-breakpoint-only($breakpoint) {
-      > [class^="col"]:not(:last-of-type) {
-        border-right: 1px solid $line-gray;
-      }
+      padding-bottom: 0;
+      margin-bottom: 0;
     }
   }
 }
@@ -88,13 +72,6 @@
   }
 }
 
-@mixin auto($size) {
-  .col-#{$size}-auto {
-    flex: 0 0 auto;
-    width: auto;
-  }
-}
-
 @mixin grid($size, $columns: $grid-columns) {
   @for $index from 1 through $columns {
     .col-#{$size}-#{$index} {
@@ -119,14 +96,11 @@
   }
 }
 
-@each $breakpoint-name, $breakpoint-size in $grid-breakpoints {
-  @include media($breakpoint-name) {
-
-    @include grid($breakpoint-name, $grid-columns);
-    @include push($breakpoint-name, $grid-columns);
-    @include pull($breakpoint-name, $grid-columns);
-    @include order($breakpoint-name);
-    @include auto($breakpoint-name);
-    @include dividers($breakpoint-name);
+@each $name, $size in $grid-breakpoints {
+  @include media($name) {
+    @include grid($name);
+    @include push($name);
+    @include pull($name);
+    @include order($name);
   }
 }
