use button--pill over circle

--- a/src/templates/partials/program-spotlight.twig
+++ b/src/templates/partials/program-spotlight.twig
@@ -76,7 +76,7 @@
                       <p>{{program.card.body}}</p>
                     </div>
                     <footer class="spotlight-item__footer">
-                      <a href="{{program.card.link_href}}" class="button button--secondary button--circle button--block">{{program.card.link_text}}</a>
+                      <a href="{{program.card.link_href}}" class="button button--secondary button--pill button--block">{{program.card.link_text}}</a>
                     </footer>
 
                   </div>
