use new margin util

--- a/src/templates/t21-contact.twig
+++ b/src/templates/t21-contact.twig
@@ -21,7 +21,7 @@
           <div class="col-md-push-1 col-md-7">
 
             <section class="section">
-              <p class="intro u-margin-y-lg">We're excited to answer your questions about the Middlebury Institute and happy to speak with you via phone, Skype, or email.</p>
+              <p class="intro u-my-6">We're excited to answer your questions about the Middlebury Institute and happy to speak with you via phone, Skype, or email.</p>
 
               {% include 'partials/social-links.twig' with {
                 items: social_links|merge(contact_social_links)
