rename img folder to images so it matches theme directory

--- a/src/scss/components/_filter.scss
+++ b/src/scss/components/_filter.scss
@@ -70,7 +70,7 @@
 
   .filter__control:checked + & {
     color: $teal;
-    background-image: url('/img/icon-filter-select.svg');
+    background-image: url('/images/icon-filter-select.svg');
     background-position: left center;
     background-repeat: no-repeat;
   }
