--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -16,7 +16,7 @@
 }
 
 .section--projects {
-  background-image: url('/img/projects-bg.jpg');
+  background-image: url('/images/projects-bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
