--- a/src/templates/partials/footer.twig
+++ b/src/templates/partials/footer.twig
@@ -48,7 +48,7 @@
 
           <div class="secondary-footer__brand">
             <!-- TODO: use picture? -->
-            <img src="img/midd-logo.png" alt="Middlebury">
+            <img src="images/midd-logo.png" alt="Middlebury">
           </div>
 
         </div>
