--- a/src/templates/partials/program-panel.twig
+++ b/src/templates/partials/program-panel.twig
@@ -2,11 +2,11 @@
   <div class="program-panel__media">
 
     <picture>
-      <source srcset="/img/program-panel-xl.jpg" media="(min-width: 960px)">
-      <source srcset="/img/program-panel-lg.jpg" media="(min-width: 580px)">
-      <source srcset="/img/program-panel-md.jpg" media="(min-width: 320px)">
-      <source srcset="/img/program-panel-xs.jpg">
-      <img src="/img/program-panel-xl.jpg" alt="">
+      <source srcset="/images/program-panel-xl.jpg" media="(min-width: 960px)">
+      <source srcset="/images/program-panel-lg.jpg" media="(min-width: 580px)">
+      <source srcset="/images/program-panel-md.jpg" media="(min-width: 320px)">
+      <source srcset="/images/program-panel-xs.jpg">
+      <img src="/images/program-panel-xl.jpg" alt="">
     </picture>
 
   </div>
