change program spotlight back piece to use aside elem

--- a/src/templates/partials/program-spotlight.twig
+++ b/src/templates/partials/program-spotlight.twig
@@ -70,7 +70,7 @@
                     </footer>
 
                   </div>
-                  <div class="spotlight-item__side spotlight-item__side--back">
+                  <aside class="spotlight-item__side spotlight-item__side--back">
 
                     <div class="spotlight-item__body">
                       <p>{{program.card.body}}</p>
@@ -79,7 +79,7 @@
                       <a href="{{program.card.link_href}}" class="button button--secondary button--pill button--block">{{program.card.link_text}}</a>
                     </footer>
 
-                  </div>
+                  </aside>
                 </div>
               </article>
             </div>
