--- a/src/templates/partials/program-spotlight.twig
+++ b/src/templates/partials/program-spotlight.twig
@@ -31,17 +31,6 @@
             <div class="carousel__item" data-carousel-item>
               <article class="spotlight-item{% if program.light == true %} spotlight-item--light{% endif %} js-spotlight-item-{{loop.index}}">
 
-                <a
-                  href="#"
-                  class="spotlight-item__close-button"
-                  role="button"
-                  aria-label="Close"
-                  data-toggle-target=".js-spotlight-item-{{loop.index}}"
-                  data-toggle-linked="spotlight-item-{{loop.index}}"
-                >
-                  <span aria-hidden="true">&times;</span>
-                </a>
-
                 <figure class="spotlight-item__image">
                   <picture>
                     <source srcset="{{program.image_md}} 1x, {{program.image_md_2x}} 2x" media="(min-width: 580px)">
@@ -71,6 +60,10 @@
 
                   </div>
                   <aside class="spotlight-item__side spotlight-item__side--back">
+
+                    <a href="#" class="spotlight-item__close-button" role="button" aria-label="Close" data-toggle-target=".js-spotlight-item-{{loop.index}}" data-toggle-linked="spotlight-item-{{loop.index}}">
+                      <span aria-hidden="true">&times;</span>
+                    </a>
 
                     <div class="spotlight-item__body">
                       <p>{{program.card.body}}</p>
